--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,125 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+button {
+  font-size: 100%;
+  font-family: inherit;
+  border: 0;
+  padding: 0;
+}
+
+.button-cont {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.add {
+  border-radius: 50%;
+  height: 70px;
+  width: 70px;
+  background-color: transparent;
+  text-align: center;
+  cursor: pointer;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.app {
+  width: 80%;
+  background-color: orange;
+  margin: 0 auto;
+  padding: 30px;
+  border-radius: 15px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+h1 {
+  text-align: center;
+}
+
+.table-stats-cont {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.table {
+  display: grid;
+  width: 70%;
+  background-color: aqua;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(20, 1fr);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.stats-cont {
+  width: 30%;
+  background-color: yellow;
+  text-align: center;
+}
+
+.stat {
+  background-color: green;
+  display: inline-block;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  line-height: 100px;
+  font-size: 50px;
+}
+
+.modal-bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.8);
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  display: grid;
+  place-items: center;
+}
+
+.close-btn-cont {
+  text-align: right;
+}
+
+.close {
+  cursor: pointer;
+}
+
+.form-cont {
+  background-color: pink;
+  width: 70%;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+.form-group {
+  padding-bottom: 15px;
+  text-align: center;
+}
+
+.form-control {
+  height: 35px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 5px;
+  width: 40%;
+  border-radius: 10px;
+  outline: none;
+  border: none;
+  padding: 15px;
+}
+
+.form-control--small {
+  width: 80px;
+}
+
+.submit-btn {
+  display: block;
+  margin: 0 auto;
+  margin-top: 25px;
+  width: 20%;
+  height: 40px;
+  padding: 5px;
+  border-radius: 10px;
+  cursor: pointer;
 }
