--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-
 button {
   font-size: 100%;
   font-family: inherit;
@@ -15,9 +11,37 @@ button {
   padding: 0;
 }
 
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: rgb(236, 236, 236);
+}
+
+.app {
+  width: 100%;
+  background-color: #000;
+  padding: 10px;
+  min-height: 100vh;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.app-cont {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+h1 {
+  text-align: center;
+  font-size: 1.4em;
+  padding: 15px;
+  background-color: rgb(100, 100, 100);
+  color: rgb(243, 243, 243);
+}
+
 .button-cont {
   text-align: center;
-  padding-bottom: 20px;
+  color: #fff;
+  padding: 20px 0;
 }
 
 .button-cont h4 {
@@ -25,25 +49,12 @@ button {
 }
 
 .add {
+  color: #fff;
   border-radius: 50%;
-  height: 70px;
-  width: 70px;
+  height: 60px;
+  width: 60px;
   background-color: transparent;
-  text-align: center;
   cursor: pointer;
-}
-
-.app {
-  width: 100%;
-  background-color: orange;
-  margin: 0 auto;
-  padding: 10px;
-  height: 100vh;
-}
-
-h1 {
-  text-align: center;
-  padding: 25px 0;
 }
 
 .table-stats-cont {
@@ -51,44 +62,10 @@ h1 {
   flex-direction: column;
 }
 
-.table {
-  display: grid;
-  background-color: aqua;
-  grid-template-columns: 1.8fr 2fr 2fr 2fr 1fr 1fr 1fr 1fr;
-  align-items: center;
-  gap: 8px 0px;
-  padding: 10px;
-}
-
-.del-col {
-  visibility: hidden;
-}
-
-.remove {
-  background-color: transparent;
-  font-size: 25px;
-  display: grid;
-  place-items: center;
-}
-
-.club-selection {
-  background-color: red;
-  text-align: center;
-  padding: 20px 0;
-}
-
-.club-selection select {
-  height: 40px;
-  width: 100px;
-}
-
-label h3 {
-  display: inline;
-}
-
 .stats-cont {
   padding: 10px;
-  background-color: yellow;
+  margin-bottom: 10px;
+  background-color: rgb(199, 199, 199);
   text-align: center;
 }
 
@@ -98,20 +75,100 @@ label h3 {
   grid-gap: 10px;
 }
 
+.stat-item {
+  display: grid;
+  justify-content: center;
+  place-items: center;
+}
+
+.stat-item h5 {
+  padding-bottom: 5px;
+}
+
 .stat {
-  background-color: green;
+  background-color: rgb(255, 249, 249);
+  color: rgb(153, 20, 20);
+  border: 1px solid rgb(92, 92, 92);
+  box-shadow: 0px 0px 15px -2px rgba(0,0,0,0.84);
   display: grid;
   align-items: center;
   width: 60px;
   height: 60px;
   border-radius: 50%;
-  font-size: 25px;
+  font-size: 23px;
 }
 
-.stat-item {
+.club-selection {
+  background-color: rgb(105, 4, 4);
+  color: rgb(255, 255, 255);
+  text-align: center;
+  padding: 15px 0;
+  margin-bottom: 5px;
+}
+
+.club-selection select {
+  background-color: #fff;
+  margin-left: 10px;
+  height: 40px;
+  width: 100px;
+  border-radius: 5px;
+  cursor: pointer;
+  padding-left: 5px;
+}
+
+label h3 {
+  display: inline;
+}
+
+.table {
   display: grid;
-  justify-content: center;
+  background-color: aqua;
+  grid-template-columns: 1.6fr 2.2fr 2.1fr 2.1fr 1fr 1fr 1fr 1fr;
+  align-items: center;
+  background: repeating-linear-gradient(#ddd 0 30px,#fff 30px 60px);
+  padding-left: 10px;
+}
+
+.table > * {
+  height: 30px;
+  display: grid;
+  align-items: center;
+}
+
+.del-col {
+  visibility: hidden;
+}
+
+.remove {
+  background-color: transparent;
+  height: 20px;
+  width: 20px;
+  display: grid;
   place-items: center;
+  cursor: pointer;
+}
+
+.icon {
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  color: #fff;
+  line-height: 1.7;
+}
+
+.icon--green {
+  background-color: green;
+}
+
+.icon--red {
+  background-color: red;
+}
+
+.icon--black {
+  background-color: black;
+  color: #fff;
 }
 
 .modal-bg {
@@ -126,6 +183,16 @@ label h3 {
   place-items: center;
 }
 
+.form-cont {
+  background-color: rgb(105, 4, 4);
+  color: rgb(230, 230, 230);
+  width: 90%;
+  max-width: 600px;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px;
+}
+
 .close-btn-cont {
   text-align: right;
 }
@@ -134,25 +201,18 @@ label h3 {
   cursor: pointer;
 }
 
-.form-cont {
-  background-color: pink;
-  width: 90%;
-  padding: 20px;
-  text-align: center;
-  border-radius: 10px;
-}
-
 .form-group {
   padding-bottom: 15px;
   text-align: center;
 }
 
 .form-control {
-  height: 35px;
+  height: 40px;
   display: block;
   margin: 0 auto;
   margin-top: 5px;
   width: 70%;
+  max-width: 250px;
   border-radius: 10px;
   outline: none;
   border: none;
@@ -167,9 +227,27 @@ label h3 {
   display: block;
   margin: 0 auto;
   margin-top: 25px;
-  width: 20%;
+  width: 60%;
+  max-width: 200px;
   height: 40px;
   padding: 5px;
   border-radius: 10px;
   cursor: pointer;
+}
+
+@media (min-width: 801px) {
+  .app {
+    border-radius: 6px;
+    margin: 20px auto;
+    padding: 15px;
+  }
+  .stats-cont {
+    padding: 15px;
+  }
+  .stat-item h5 {
+    font-size: 0.9em;
+  }
+  .table {
+    grid-template-columns: 1fr 1fr 1fr 1.5fr 1fr 1fr 1fr 0.5fr;
+  }
 }
