--- a/src/App.css
+++ b/src/App.css
@@ -228,6 +228,7 @@ h1 {
   margin-bottom: 15px;
   background-color: rgb(105, 4, 4);
   border-radius: 10px;
+  color: #fff;
 }
 
 .close-btn-cont {
